--- a/package.json
+++ b/package.json
@@ -3,14 +3,47 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "ts-node-dev --respawn ./bin/www",
+    "watch": "nodemon -e ejs --ignore public",
+    "compile": "tsc -w"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jest": "^28.1.3",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "livereload": "^0.9.3",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.11",
+    "supertest": "^6.2.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-livereload": "^0.6.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/debug": "^4.1.7",
+    "@types/ejs": "^3.1.1",
+    "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.2",
+    "@types/joi": "^17.2.3",
+    "@types/livereload": "^0.9.2",
+    "@types/morgan": "^1.9.3",
+    "@types/sequelize": "^4.28.14",
+    "@types/uuid": "^8.3.4"
   }
 }
