--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -36,6 +37,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-livereload": "^0.6.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
